Reverted the refactor and applied the overflow scroll fix for the menu.

--- a/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
@@ -166,12 +166,11 @@ ul a {
       }
     }
     .nav-holder {
-        /*
       position:fixed;
       padding:100px 0 0;
       @include breakpoint($mobile) {
         padding:53px 0 0;
-      }*/
+      }
     }
     .filter-slide {
       position:fixed;
@@ -476,25 +475,22 @@ ul a {
 }
 /* main nav styles */
 .nav-holder {
-  //position:fixed;
-  overflow-y: scroll; 
-  -webkit-overflow-scrolling : touch;
-  padding:45px 0 50px;
-  //padding:100px 0 0;
   width:430px;
+  -webkit-overflow-scrolling: touch;
   height:100vh;
+  padding:45px 0 50px;
   background:$white;
-    position: absolute;
-  top:0;
+  position:absolute;
+  top:0px;
   right:0;
   margin-right:-460px;
   z-index:99;
   @include box-shadow(0 2px 7px rgba(24,24,24,.5));
+  overflow-y: scroll; 
   @include breakpoint($mobile) {
     margin-right:-310px;
     width:285px;
     padding-top: 35px;
-    padding:53px 0 0;
   }
     .btn{
      margin-left:32px;
